Remove StandardCplusplus from properties closes #10

--- a/library.properties
+++ b/library.properties
@@ -7,5 +7,5 @@ paragraph=An LC12S 2.4GHz RF module is needed for this library
 category=Communication
 url=https://github.com/atc1441/NETSGPClient
 architectures=*
-depends=StandardCplusplus
+depends=
 dot_a_linkage=true
